[gd_scene load_steps=24 format=3 uid="uid://btfd8js5xod4x"]

[ext_resource type="Script" uid="uid://cutuqxeoisl8f" path="res://scripts/ui/main_menu.gd" id="1_hjnmg"]
[ext_resource type="Texture2D" uid="uid://bidl06v5fr0ip" path="res://assets/game/background.jpg" id="1_wjuww"]
[ext_resource type="AudioStream" uid="uid://dkgqi3wdy7vtp" path="res://assets/audio/sfx/menu_explosion.wav" id="4_tixma"]
[ext_resource type="Texture2D" uid="uid://d0lmksntdp4cf" path="res://assets/ui/main_menu/play_button.png" id="5_c34b8"]
[ext_resource type="Texture2D" uid="uid://33xw3ps8gx4b" path="res://assets/ui/main_menu/settings_button.png" id="6_rmck1"]
[ext_resource type="PackedScene" uid="uid://btxk60por2vh8" path="res://scenes/ui/settings_menu.tscn" id="7_f544u"]
[ext_resource type="PackedScene" uid="uid://cpbukufh1mx3x" path="res://scenes/ui/how_to_play.tscn" id="8_hypct"]

[sub_resource type="Animation" id="Animation_w7djm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8ginc"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_impcl"]
_data = {
&"RESET": SubResource("Animation_w7djm"),
&"appear": SubResource("Animation_8ginc")
}

[sub_resource type="Animation" id="Animation_5vo4s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 306)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b65ng"]
resource_name = "appear"
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 222), Vector2(0, 306)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8471m"]
_data = {
&"RESET": SubResource("Animation_5vo4s"),
&"appear": SubResource("Animation_b65ng")
}

[sub_resource type="Animation" id="Animation_74bf2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0asn5"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fm7ny"]
resource_name = "pulse"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t66pc"]
_data = {
&"RESET": SubResource("Animation_74bf2"),
&"appear": SubResource("Animation_0asn5"),
&"pulse": SubResource("Animation_fm7ny")
}

[sub_resource type="Animation" id="Animation_4cpxc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iyefc"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5wqwc"]
_data = {
&"RESET": SubResource("Animation_4cpxc"),
&"appear": SubResource("Animation_iyefc")
}

[sub_resource type="Animation" id="Animation_brayh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vup6s"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 625), Vector2(0, 558)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqxw2"]
_data = {
&"RESET": SubResource("Animation_brayh"),
&"appear": SubResource("Animation_vup6s")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hjnmg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -36.0
offset_right = 64.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wjuww")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_top = 123.0
offset_right = 576.0
offset_bottom = 299.0
grow_horizontal = 2
pivot_offset = Vector2(576, 0)
theme_override_font_sizes/font_size = 96
text = "MAIN_MENU_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="TitleLabel"]
libraries = {
&"": SubResource("AnimationLibrary_impcl")
}

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tixma")
pitch_scale = 0.7
bus = &"SFX"

[node name="SubTitleLabel" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(284, 0)
theme_override_font_sizes/font_size = 35
text = "MAIN_MENU_SUBTITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SubTitleLabel"]
libraries = {
&"": SubResource("AnimationLibrary_8471m")
}
speed_scale = 3.0

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = 92.0
offset_right = 13.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="Sprite" type="Sprite2D" parent="PlayButton"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(11, 16)
texture = ExtResource("5_c34b8")
centered = false
offset = Vector2(-11, -16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayButton/Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_t66pc")
}

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -156.0
offset_top = -131.0
offset_right = -27.0
offset_bottom = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="Sprite" type="Sprite2D" parent="SettingsButton"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_rmck1")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="SettingsButton/Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_5wqwc")
}
speed_scale = 1.5

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
position_smoothing_enabled = true

[node name="SettingsMenu" parent="." instance=ExtResource("7_f544u")]
layout_mode = 1
offset_left = 1216.0
offset_right = 1216.0

[node name="HowToPlay" parent="." instance=ExtResource("8_hypct")]
layout_mode = 1
offset_top = 701.0
offset_bottom = 701.0

[node name="HowToPlayContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="HowToPlayButton" type="Button" parent="HowToPlayContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "MAIN_MENU_HTP"

[node name="AnimationPlayer" type="AnimationPlayer" parent="HowToPlayContainer"]
root_node = NodePath("../HowToPlayButton")
libraries = {
&"": SubResource("AnimationLibrary_hqxw2")
}

[connection signal="animation_finished" from="TitleLabel/AnimationPlayer" to="." method="_on_title_animation_player_animation_finished"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HowToPlayContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
